--- a/page6.html
+++ b/page6.html
@@ -1,4 +1,14 @@
-<table>
+<html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
+
+
+
+<table style="width:100%">
   <tr>
     <th>τιτλος</th>
     <th>ειδος</th>
@@ -15,3 +25,8 @@
     <td>usa</td>
   </tr>
 </table>
+
+
+
+</body>
+</html>
